--- a/demos/overlay/index.html
+++ b/demos/overlay/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Overlay demo</title>
-  <link rel="stylesheet" href="overlay.css" type="text/css" media="screen" charset="utf-8" />
-  <!--[if lte IE 8]><link rel="stylesheet" href="overlay-ie.css" type="text/css" media="screen" charset="utf-8" /><![endif]-->
+  <link rel="stylesheet" href="../../dist/overlay/css/overlay.css" type="text/css" media="screen" charset="utf-8" />
+  <!--[if lte IE 8]><link rel="stylesheet" href="../../dist/overlay/css/overlay-ie.css" type="text/css" media="screen" charset="utf-8" /><![endif]-->
 </head>
 <body>
 
@@ -39,8 +39,8 @@
       Nam nisl purus, rhoncus convallis bibendum sit amet, iaculis at purus.</p>
   </div>
 
-  <script src="lib/prototypejs_1.7.js" type="text/javascript"></script>
-  <script src="overlay.js" type="text/javascript"></script>
+  <script src="../../lib/prototypejs_1.7.js" type="text/javascript"></script>
+  <script src="../../dist/overlay/js/overlay.js" type="text/javascript"></script>
   <script type="text/javascript">
     $(document).observe("dom:loaded", function(){
       var o = new Overlay();
